# patterns

./: README.md  pyproject.toml
src/observer/: active_observers.py  main.py
src/strategy/: duck.py  fly.py  mini_duck_simulator.py  quack.py
